[package]
name = "glang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = { version = "0.27.2", features = ["persistence"] }
egui_graphs = { version = "0.20.0", features = ["egui_persistence"] }
petgraph = "0.6.5"
